# identity.rs

identity_core/: Cargo.toml
identity_core/src/common/: timestamp.rs
identity_credential/: Cargo.toml
identity_credential/src/presentation/: jwt_serialization.rs  mod.rs
identity_jose/src/jws/: algorithm.rs
