[package]
name = "identity_core"
version = "1.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "tangle", "identity"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true
description = "The core traits and types for the identity-rs library."

[dependencies]
ic-cdk = { version = "0.13", optional = true }
iota-crypto = { version = "0.23", default-features = false, features = ["ed25519", "sha", "x25519", "std"] }
multibase = { version = "0.9", default-features = false, features = ["std"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
strum.workspace = true
thiserror.workspace = true
time = { version = "0.3.23", default-features = false, features = ["std", "serde", "parsing", "formatting"] }
url = { version = "2.4", default-features = false, features = ["serde"] }
zeroize = { version = "1.6", default-features = false }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi"), not(feature = "ic-wasm")))'.dependencies]
js-sys = { version = "0.3.55", default-features = false, optional = true}

[dev-dependencies]
proptest = { version = "1.0.0" }
quickcheck = { version = "1.0" }
quickcheck_macros = { version = "1.0" }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --workspace --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["ic-wasm"]
ic-wasm = ["dep:ic-cdk"]
